# VeloxEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.cmd  build_tests.cmd  compile_shaders.cmd  fastbuild.cmd  ideas-plan.txt  rad.proj  run.cmd  test.cmd  vcpkg.json
.github/workflows/: build-test.yml  does-it-build.yml
App/: CMakeLists.txt
App/src/: Menu.cpp  Obstacles.cpp  Plane.cpp  PlaneGame.cpp  PostGameMenu.cpp  ScrollingBackground.cpp  main.cpp  main.cpp~
Velox/: CMakeLists.txt
Velox/include/Velox/: Arena.h  Asset.h  Config.h  Console.h  ConsoleCommands.h  Core.h  Debug.h  Entity.h  Event.h  Input.h  Log.h  PCH.h  Pool.h  Primitive.h  Renderer.h  RingBuffer.h  Text.h  Timing.h  Types.h  UI.h  Util.h  Velox.h  Widgets.h  imconfig.h
Velox/include/Velox/Rendering/: Pipeline.h  Renderer.h  Vertex.h
Velox/shaders/: colored.frag.glsl  colored.vert.glsl  fragment_base.frag.glsl  indexed_textures.frag.glsl  indexed_textures.vert.glsl  sdf_quad.frag.glsl  sdf_quad.vert.glsl  textured_quad.frag.glsl  textured_quad.vert.glsl  vertex_base.glsl
Velox/src/: Arena.cpp  Asset.cpp  Config.cpp  Console.cpp  ConsoleCommands.cpp  Core.cpp  Debug.cpp  Entity.cpp  Event.cpp  Input.cpp  Log.cpp  Primitive.cpp  Renderer.cpp  Text.cpp  Timing.cpp  UI.cpp  Util.cpp  Velox.cpp  Widgets.cpp
Velox/src/Rendering/: Renderer.cpp  Renderer.cpp~
config/: defaults.toml
include/App/: Menu.h  Obstacles.h  Plane.h  PlaneGame.h  PostGameMenu.h  ScrollingBackground.h
tests/: CMakeLists.txt  TestRunner.cpp
